--- a/wasm/index.html
+++ b/wasm/index.html
@@ -92,14 +92,15 @@
           <div
             class="px-4 py-2 border-b border-gray-800 flex items-center justify-between"
           >
-            <h2 class="text-sm font-medium text-gray-400">
-              FTS Results
-            </h2>
+            <h2 class="text-sm font-medium text-gray-400">FTS Results</h2>
             <span id="results-count" class="text-xs text-gray-600"
               >0 results</span
             >
           </div>
-          <div id="results-list" class="flex-1 overflow-y-auto thin-scrollbar p-3 space-y-2">
+          <div
+            id="results-list"
+            class="flex-1 overflow-y-auto thin-scrollbar p-3 space-y-2"
+          >
             <div
               id="results-placeholder"
               class="flex items-center justify-center h-full text-gray-600 text-sm"
